log

Thu 14 Mar 2024 08:38:32 PM UTC: 
 exercises.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   19 |     if (arr[i] > datoMayor)
      |     ^~
exercises.c:21:7: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   21 |       printf("Dato = %d\n", datoMayor);
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
25870de
